--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -124,7 +124,8 @@
 			</div>
 		</div>
 		<div id="filter" v-if="isShow" v-bind:style="filterContainer" v-on:tap="setIsShow(false)">
-			<ul class="mui-col-sm-4 mui-col-xs-4" style="align-self: center;-webkit-padding-start: 0px;">
+			<img v-if="showType==1" src="" style="width: 100%;height: auto;"/>
+			<ul v-else class="mui-col-sm-4 mui-col-xs-4" style="align-self: center;-webkit-padding-start: 0px;">
 				<filter-item v-for="item of options" v-bind:option="item" v-if="cellIsShow(item)"></filter-item>
 			</ul>
 		</div>
@@ -185,6 +186,7 @@
 					console.log("添加文件");
 					filter.isShow = true;
 					filter.fileNo = fileList.filesArr.length;
+					filter.showType=0;
 				});
 
 				/**
