--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -118,13 +118,14 @@
 		</nav>
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
+				<img src="" style="width: 100%;" />
 				<ul id="filesList" class="mui-table-view">
-					<file-item v-for="(fileItem,indexItem) of filesArr" v-bind:file="fileItem" v-bind:index="indexItem" v-on:delcell="delFile"></file-item>
+					<file-item v-for="(fileItem,indexItem) of filesArr" v-bind:file="fileItem" v-bind:index="indexItem" v-on:delcell="delFile" v-on:showpic="showPic"></file-item>
 				</ul>
 			</div>
 		</div>
 		<div id="filter" v-if="isShow" v-bind:style="filterContainer" v-on:tap="setIsShow(false)">
-			<img v-if="showType==1" src="" style="width: 100%;height: auto;"/>
+			<img v-if="showType==1" v-bind:src="showPath" style="max-width: 100%; max-height: 100%; width: 100%;height: auto;"/>
 			<ul v-else class="mui-col-sm-4 mui-col-xs-4" style="align-self: center;-webkit-padding-start: 0px;">
 				<filter-item v-for="item of options" v-bind:option="item" v-if="cellIsShow(item)"></filter-item>
 			</ul>
@@ -179,7 +180,6 @@
 			 * 初始化监听
 			 */
 			function initListener() {
-
 				//文件数组变化的事件
 				fileList.$watch('filesArr', function(newVal, oldVal) {
 					console.log("newVal " + newVal.length);
