增加文件时 列表滚动到顶部

--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -197,6 +197,7 @@
 				window.addEventListener("chose-files", function(e) {
 					console.log("chose-files事件：" + JSON.stringify(e.detail.data));
 					fileList.pushFilesArr(rechargeFileArr(e.detail.data));
+					mui(".mui-scroll-wrapper").scroll().scrollTo(0,0,100);
 				});
 				//添加文件
 				document.getElementById('addfiles').addEventListener('tap', function() {
