--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -18,7 +18,7 @@
 			.mui-content {
 				word-wrap: break-word;
 				background-color: white;
-				font-family: inherit !important;
+				/*font-family: inherit !important;*/
 			}
 
 			.mui-table-view:before,
